--- a/nextflow.config
+++ b/nextflow.config
@@ -201,6 +201,11 @@ manifest {
     doi             = ''
 }
 
+// Nextflow plugins
+plugins {
+    id 'nf-schema@2.3.0' // Validation of pipeline parameters and creation of an input channel from a sample sheet
+}
+
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
 
