--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,14 +18,6 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: SAMPLESHEET_CHECK {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-
     withName: CHECK_PAIRED {
         ext.args = ''
     }
@@ -58,5 +50,11 @@ process {
             ]
         ext.args2 = "solver=${params.solver}"
     }
-
+    withName: 'CAT_FASTQ' {
+        publishDir = [
+            path: { params.save_merged_fastq ? "${params.outdir}/fastq" : params.outdir },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> (filename.endsWith('.fastq.gz') && params.save_merged_fastq) ? filename : null }
+        ]
+    }
 }
