Adds parameter to save merged fastqs.

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,9 @@ params {
     enumerations               = 1
     beta                       = 0.009
 
+    // Alignment
+    save_merged_fastq          = false
+
     // References
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
