--- a/nextflow.config
+++ b/nextflow.config
@@ -145,11 +145,12 @@ profiles {
         executor.cpus          = 16
         executor.memory        = 60.GB
     }
-    test           { includeConfig 'conf/test.config'      }
-    test_full      { includeConfig 'conf/test_full.config' }
-    test_fastq     { includeConfig 'conf/test_fastq.config'}
-    test_rna       { includeConfig 'conf/test_rna.config'}
-    test_dna_rna   { includeConfig 'conf/test_dna_rna.config'}
+    test           { includeConfig 'conf/test.config'           }
+    test_full      { includeConfig 'conf/test_full.config'      }
+    test_fastq     { includeConfig 'conf/test_fastq.config'     }
+    test_fastq_cat { includeConfig 'conf/test_fastq_cat.config' }
+    test_rna       { includeConfig 'conf/test_rna.config'       }
+    test_dna_rna   { includeConfig 'conf/test_dna_rna.config'   }
 }
 
 
